# RAG_COMPLETE_GUIDE

./: .gitignore  RAG.ipynb  RAG_COMPLETE_GUIDE.md  README.md  main.py  pyproject.toml
chroma.db/3c668099-d2ed-46f1-82df-3b1fcfb8ad82/: index_metadata.pickle
